crates/tree-sitter-pascal/test/corpus/labeled-statements.txt
===
labeled single statements
===

procedure Main;
begin
  if a then
    FirstLabel: SecondLabel: b
  else
    c;

  while a do
    WhileLabel: d;

  for i := a to b do
    ForLabel: e;

  with a do
    WithLabel: f;

  case a of
    1: CaseLabel: g;
  end;

  OuterLabel: if b then
    ThenLabel: h
  else
    ElseLabel: i;

  goto EmptyLabel;
  EmptyLabel:
end;

---

(root
  (defProc
    (declProc (kProcedure) (identifier))
    (block
      (kBegin)
      (ifElse
        (kIf) (identifier) (kThen)
        (labeledStatement
          (label (identifier))
          (label (identifier))
          (statement (identifier)))
        (kElse)
        (statement (identifier)))
      (while
        (kWhile) (identifier) (kDo)
        (labeledStatement
          (label (identifier))
          (statement (identifier))))
      (for
        (kFor)
        (assignment (identifier) (kAssign) (identifier))
        (kTo) (identifier) (kDo)
        (labeledStatement
          (label (identifier))
          (statement (identifier))))
      (with
        (kWith) (identifier) (kDo)
        (labeledStatement
          (label (identifier))
          (statement (identifier))))
      (case
        (kCase) (identifier) (kOf)
        (caseCase
          (caseLabel (literalNumber))
          (labeledStatement
            (label (identifier))
            (statement (identifier))))
        (kEnd))
      (label (identifier))
      (ifElse
        (kIf) (identifier) (kThen)
        (labeledStatement
          (label (identifier))
          (statement (identifier)))
        (kElse)
        (labeledStatement
          (label (identifier))
          (statement (identifier))))
      (goto (kGoto) (identifier))
      (label (identifier))
      (kEnd))))

===
numeric labels in single-statement contexts
===

program Main;
label 1, 2;
begin
  if a then
    1: b;
  while a do
    2: c;
end.

---

(root
  (program
    (kProgram) (moduleName (identifier))
    (declLabels
      (kLabel)
      (declLabel (labelNumber))
      (declLabel (labelNumber)))
    (block
      (kBegin)
      (if
        (kIf) (identifier) (kThen)
        (labeledStatement
          (label (labelNumber))
          (statement (identifier))))
      (while
        (kWhile) (identifier) (kDo)
        (labeledStatement
          (label (labelNumber))
          (statement (identifier))))
      (kEnd))
    (kEndDot)))

===
labeled nested statements keep dangling else binding
===

procedure Main;
begin
  if a then
    OuterLabel: if b then
      ThenLabel: c
    else
      InnerElseLabel: d
  else
    OuterElseLabel: e;
end;

---

(root
  (defProc
    (declProc (kProcedure) (identifier))
    (block
      (kBegin)
      (ifElse
        (kIf) (identifier) (kThen)
        (labeledStatement
          (label (identifier))
          (ifElse
            (kIf) (identifier) (kThen)
            (labeledStatement
              (label (identifier))
              (statement (identifier)))
            (kElse)
            (labeledStatement
              (label (identifier))
              (statement (identifier)))))
        (kElse)
        (labeledStatement
          (label (identifier))
          (statement (identifier))))
      (kEnd))))

===
labeled foreach and exception-handler bodies
===

procedure Main;
begin
  for Item in Items do
    ForEachLabel: a;

  try
    b;
  except
    on E: Exception do
      HandlerLabel: c;
    else
      ElseLabel: d;
  end;
end;

---

(root
  (defProc
    (declProc (kProcedure) (identifier))
    (block
      (kBegin)
      (foreach
        (kFor) (identifier) (kIn) (identifier) (kDo)
        (labeledStatement
          (label (identifier))
          (statement (identifier))))
      (try
        (kTry)
        (statements
          (statement (identifier)))
        (kExcept)
        (exceptionHandler
          (kOn) (identifier) (typeref (identifier)) (kDo)
          (labeledStatement
            (label (identifier))
            (statement (identifier))))
        (exceptionElse
          (kElse)
          (labeledStatement
            (label (identifier))
            (statement (identifier))))
        (kEnd))
      (kEnd))))

===
missing separator before a label
===

program MissingSeparator;
begin
  Work L:
end.

---

(root
  (program
    (kProgram)
    (moduleName (identifier))
    (block
      (kBegin)
      (label
        (identifier)
        (ERROR (identifier)))
      (kEnd))
    (kEndDot)))

===
missing separator after goto
===

program MissingGotoSeparator;
begin
  goto L L:
end.

---

(root
  (program
    (kProgram)
    (moduleName (identifier))
    (block
      (kBegin)
      (goto
        (kGoto)
        (identifier)
        (MISSING ";"))
      (label (identifier))
      (kEnd))
    (kEndDot)))

===
missing separator in repeat body
===

program MissingRepeatSeparator;
begin
  repeat
    Work L:
  until B
end.

---

(root
  (program
    (kProgram)
    (moduleName (identifier))
    (block
      (kBegin)
      (repeat
        (kRepeat)
        (statements
          (label
            (identifier)
            (ERROR (identifier))))
        (kUntil)
        (identifier))
      (kEnd))
    (kEndDot)))

===
missing separator in try body
===

program MissingTrySeparator;
begin
  try
    Work L:
  finally
    Cleanup
  end
end.

---

(root
  (program
    (kProgram)
    (moduleName (identifier))
    (block
      (kBegin)
      (try
        (kTry)
        (statements
          (label
            (identifier)
            (ERROR (identifier))))
        (kFinally)
        (statements
          (statement (identifier)))
        (kEnd))
      (kEnd))
    (kEndDot)))

===
trailing numeric label remains a label
===
program P;
label 10;
begin
  Work;
  10:
end.

---

(root
  (program
    (kProgram)
    (moduleName
      (identifier))
    (declLabels
      (kLabel)
      (declLabel
        (labelNumber)))
    (block
      (kBegin)
      (statement
        (identifier))
      (label
        (labelNumber))
      (kEnd))
    (kEndDot)))

===
named labeled statement remains a labeled statement
===
program P;
begin
  L: Work;
end.

---

(root
  (program
    (kProgram)
    (moduleName
      (identifier))
    (block
      (kBegin)
      (label
        (identifier))
      (statement
        (identifier))
      (kEnd))
    (kEndDot)))

===
Label at the start of a statement list stays a sibling
===

procedure P;
label Done;
begin
  Done: Exit;
end;

---

(root
  (defProc
    (declProc (kProcedure) (identifier))
    (declLabels (kLabel) (declLabel (identifier)))
    (block
      (kBegin)
      (label (identifier))
      (statement (identifier))
      (kEnd))))
